Bug 1727925 - Part 1: Migrate windows32-tests from AWS to Azure r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D123857

UltraBlame original commit: 28558473b09ab8a8581027da4b059647476554e5

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -926,6 +926,91 @@ windows
 7
 -
 tests
+windows10
+-
+32
+-
+2004
+-
+shippable
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+win32
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+windows32
+-
+2004
+-
+tests
+windows10
+-
+32
+-
+2004
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+win32
+/
+opt
+test
+-
+sets
+:
+-
+windows32
+-
+2004
+-
+tests
+windows10
+-
+32
+-
+2004
+-
+qr
+/
+debug
+:
+build
+-
+platform
+:
+win32
+/
+debug
+test
+-
+sets
+:
+-
+windows32
+-
+2004
+-
+tests
 #
 win64
 windows10
