--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -1190,25 +1190,7 @@ tests
 -
 cppunit
 -
-gtest
--
 crashtest
--
-firefox
--
-ui
--
-functional
--
-local
--
-firefox
--
-ui
--
-functional
--
-remote
 #
 -
 jittest
@@ -1226,6 +1208,40 @@ set
 -
 jsreftest
 -
+mochitest
+-
+plain
+-
+mochitest
+-
+plain
+-
+gpu
+windows32
+-
+2004
+-
+tests
+:
+-
+gtest
+-
+firefox
+-
+ui
+-
+functional
+-
+local
+-
+firefox
+-
+ui
+-
+functional
+-
+remote
+-
 marionette
 -
 mochitest
@@ -1239,16 +1255,6 @@ chrome
 mochitest
 -
 chrome
--
-gpu
--
-mochitest
--
-plain
--
-mochitest
--
-plain
 -
 gpu
 -
