--- a/browser/components/aboutlogins/tests/browser/browser.ini
+++ b/browser/components/aboutlogins/tests/browser/browser.ini
@@ -131,6 +131,29 @@ on
 linux
 Bug
 1627419
+os
+=
+=
+"
+mac
+"
+&
+&
+os_version
+=
+=
+"
+10
+.
+15
+"
+&
+&
+!
+debug
+#
+Bug
+1710079
 [
 browser_alertDismissedAfterChangingPassword
 .
