--- a/testing/web-platform/meta/svg/idlharness.window.js.ini
+++ b/testing/web-platform/meta/svg/idlharness.window.js.ini
@@ -26,6 +26,22 @@ expected
 :
 FAIL
 [
+TimeEvent
+interface
+:
+operation
+initTimeEvent
+(
+DOMString
+Window
+?
+long
+)
+]
+expected
+:
+FAIL
+[
 SVGAnimatedRect
 interface
 :
@@ -2496,6 +2512,303 @@ with
 the
 proper
 type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animate
+must
+inherit
+property
+"
+correspondingElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animate
+must
+inherit
+property
+"
+correspondingUseElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+set
+must
+inherit
+property
+"
+correspondingElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+set
+must
+inherit
+property
+"
+correspondingUseElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animateMotion
+must
+inherit
+property
+"
+correspondingElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animateMotion
+must
+inherit
+property
+"
+correspondingUseElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+mpath
+must
+inherit
+property
+"
+correspondingElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+mpath
+must
+inherit
+property
+"
+correspondingUseElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animateTransform
+must
+inherit
+property
+"
+correspondingElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGElement
+interface
+:
+objects
+.
+animateTransform
+must
+inherit
+property
+"
+correspondingUseElement
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+:
+existence
+and
+properties
+of
+interface
+object
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+object
+length
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+object
+name
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+:
+existence
+and
+properties
+of
+interface
+prototype
+object
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+:
+existence
+and
+properties
+of
+interface
+prototype
+object
+'
+s
+"
+constructor
+"
+property
+]
+expected
+:
+FAIL
+[
+SVGDiscardElement
+interface
+:
+existence
+and
+properties
+of
+interface
+prototype
+object
+'
+s
+unscopables
+property
 ]
 expected
 :
