Bug 1727943 - Part 1: Migrate Windows 10 ccov from AWS to Azure r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D123865

UltraBlame original commit: 8339eb73128152cc7c40f9abccdbf2695f2a0c0a

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -1037,45 +1037,28 @@ test
 sets
 :
 -
-desktop
--
-screenshot
--
-capture
--
-windows
--
-ccov
--
-tests
--
-ccov
--
-code
--
-coverage
--
-tests
--
 windows10
 -
-2004
+64
+-
+ccov
 -
 tests
 #
 For
 Bug
 1723531
--
-web
--
-platform
--
-tests
-#
-For
+but
+without
+what
+has
+been
+migrated
+in
 Bug
-1723531
+X
+so
+far
 windows10
 -
 64
@@ -1333,6 +1316,41 @@ win10
 -
 64
 2004
+windows10
+-
+64
+-
+2004
+-
+ccov
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+win64
+-
+ccov
+/
+opt
+test
+-
+sets
+:
+-
+windows10
+-
+64
+-
+2004
+-
+ccov
+-
+tests
 windows10
 -
 64
