--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -1481,6 +1481,110 @@ windows10
 -
 64
 -
+ccov
+-
+tests
+:
+-
+jittest
+-
+mochitest
+-
+plain
+-
+mochitest
+-
+browser
+-
+chrome
+-
+mochitest
+-
+devtools
+-
+chrome
+-
+web
+-
+platform
+-
+tests
+-
+web
+-
+platform
+-
+tests
+-
+reftest
+-
+web
+-
+platform
+-
+tests
+-
+wdspec
+-
+crashtest
+-
+reftest
+-
+xpcshell
+windows10
+-
+64
+-
+2004
+-
+ccov
+-
+tests
+:
+-
+gtest
+-
+marionette
+-
+test
+-
+coverage
+-
+test
+-
+verify
+-
+test
+-
+verify
+-
+gpu
+-
+cppunit
+-
+jsreftest
+-
+web
+-
+platform
+-
+tests
+-
+crashtest
+-
+web
+-
+platform
+-
+tests
+-
+print
+-
+reftest
+windows10
+-
+64
+-
 2004
 -
 failure
