Bug 1670973, add a test to check how http redirects affect to the session history, r=peterv
The old implementation and SHIP seem to have the same behavior.

Differential Revision: https://phabricator.services.mozilla.com/D123117

UltraBlame original commit: 20cdfb2cb9d9acaa924640fe5a43353841010b6d

--- a/docshell/test/navigation/mochitest.ini
+++ b/docshell/test/navigation/mochitest.ini
@@ -222,6 +222,27 @@ html
 ^
 headers
 ^
+file_session_history_on_redirect
+.
+html
+file_session_history_on_redirect
+.
+html
+^
+headers
+^
+file_session_history_on_redirect_2
+.
+html
+file_session_history_on_redirect_2
+.
+html
+^
+headers
+^
+redirect_handlers
+.
+sjs
 frame_load_as_example_com
 .
 html
@@ -589,6 +610,11 @@ bug
 1263213
 [
 test_performance_navigation
+.
+html
+]
+[
+test_session_history_on_redirect
 .
 html
 ]
