--- a/docshell/test/navigation/mochitest.ini
+++ b/docshell/test/navigation/mochitest.ini
@@ -198,6 +198,18 @@ file_bug1379762
 1
 .
 html
+file_scrollRestoration_bfcache_and_nobfcache
+.
+html
+file_scrollRestoration_bfcache_and_nobfcache_part2
+.
+html
+file_scrollRestoration_bfcache_and_nobfcache_part2
+.
+html
+^
+headers
+^
 file_scrollRestoration_navigate
 .
 html
