--- a/dom/security/test/https-first/mochitest.ini
+++ b/dom/security/test/https-first/mochitest.ini
@@ -31,6 +31,20 @@ html
 file_upgrade_insecure_server
 .
 sjs
+skip
+-
+if
+=
+win10_2004
+&
+&
+bits
+=
+=
+32
+#
+Bug
+1727925
 [
 test_redirect_upgrade
 .
