Bug 1706896: Split test for computed timing path on summary graph into 2. r=jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D124004

UltraBlame original commit: 6207827ca56ad53fdef1b0c3da000d36600f6a54

--- a/devtools/client/inspector/animation/test/browser.ini
+++ b/devtools/client/inspector/animation/test/browser.ini
@@ -86,6 +86,15 @@ marker_head
 js
 summary
 -
+graph_computed
+-
+timing
+-
+path_head
+.
+js
+summary
+-
 graph_delay
 -
 sign_head
@@ -824,7 +833,18 @@ graph_computed
 -
 timing
 -
-path
+path_1
+.
+js
+]
+[
+browser_animation_summary
+-
+graph_computed
+-
+timing
+-
+path_2
 .
 js
 ]
