--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -73249,6 +73249,37 @@ mirror
 :
 once
 #
+Use
+async
+data
+getter
+on
+Wayland
+Clipboard
+-
+name
+:
+widget
+.
+wayland
+.
+async
+-
+data
+-
+transfer
+.
+enabled
+type
+:
+bool
+value
+:
+false
+mirror
+:
+once
+#
 Force
 fractional
 scaling
