--- a/taskcluster/ci/test/reftest.yml
+++ b/taskcluster/ci/test/reftest.yml
@@ -2029,6 +2029,9 @@ debug
 :
 [
 '
+fission
+'
+'
 webrender
 -
 sw
@@ -2045,6 +2048,9 @@ qr
 opt
 :
 [
+'
+fission
+'
 '
 webrender
 -
@@ -2076,6 +2082,8 @@ platform
 linux1804
 -
 64
+-
+qr
 /
 debug
 :
