Bug 1728280 - [devtools] try preset is no longer running windows jobs r=bomsy
Differential Revision: https://phabricator.services.mozilla.com/D124030

UltraBlame original commit: 91a74d477f4c286d829385375ffbfb3804adba69

--- a/tools/tryselect/try_presets.yml
+++ b/tools/tryselect/try_presets.yml
@@ -275,9 +275,7 @@ mochitest
 devtools
 -
 chrome
-should
-match
-the
+matches
 "
 -
 e10s
@@ -289,28 +287,17 @@ fis
 -
 e10s
 "
-flavors
 #
-explicitly
-target
-"
-'
-windows10
--
-64
--
-qr
-/
-"
-to
-avoid
-duplicate
+Windows
+:
+skip
 jobs
 on
 asan
-&
-shippable
-builds
+and
+32
+bits
+platforms
 -
 "
 '
@@ -328,12 +315,36 @@ chrome
 1proc
 '
 windows10
+!
+asan
+!
 -
-64
+32
+"
+#
+macos
+:
+no
+extra
+platform
+to
+filter
+out
 -
-qr
-/
+"
+'
+mochitest
+-
+devtools
+-
+chrome
 |
+'
+mochitest
+-
+chrome
+-
+1proc
 '
 macosx
 "
