Bug 1727844 - part 2: Add WPT to check back commands' behavior with `white-space` style r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D123869

UltraBlame original commit: b55f2bffdb958a4bb013f59e6435041c46ea09a0

--- a/testing/web-platform/meta/editing/run/delete.html.ini
+++ b/testing/web-platform/meta/editing/run/delete.html.ini
@@ -9563,16 +9563,6 @@ html
 -
 7000
 ]
-max
--
-asserts
-:
-4
-min
--
-asserts
-:
-1
 [
 [
 [
@@ -11839,18 +11829,11 @@ delete
 <
 div
 >
-abc
-<
-/
-div
->
-<
-div
->
+a
 [
 \
 ]
-def
+bc
 <
 /
 div
@@ -11878,11 +11861,18 @@ delete
 <
 div
 >
-a
+abc
+<
+/
+div
+>
+<
+div
+>
 [
 \
 ]
-bc
+def
 <
 /
 div
@@ -11994,12 +11984,8 @@ and
 webrender
 :
 [
-"
 PASS
-"
-"
 FAIL
-"
 ]
 if
 (
@@ -12018,12 +12004,8 @@ not
 fission
 :
 [
-"
 PASS
-"
-"
 FAIL
-"
 ]
 if
 (
@@ -12039,12 +12021,8 @@ not
 debug
 :
 [
-"
 PASS
-"
-"
 FAIL
-"
 ]
 [
 [
@@ -12107,6 +12085,230 @@ span
 <
 /
 p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+delete
+.
+html
+?
+7001
+-
+last
+]
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+>
+foo
+\
+\
+nb
+[
+\
+]
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+wrap
+>
+foo
+\
+\
+nb
+[
+\
+]
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+line
+>
+foo
+\
+\
+n
+\
+\
+n
+[
+\
+]
+bar
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+line
+>
+foo
+\
+\
+nb
+[
+\
+]
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+nowrap
+>
+foo
+\
+\
+nb
+[
+\
+]
+<
+/
+div
 >
 "
 compare
