--- a/testing/web-platform/meta/editing/run/forwarddelete.html.ini
+++ b/testing/web-platform/meta/editing/run/forwarddelete.html.ini
@@ -8583,16 +8583,44 @@ html
 -
 last
 ]
-max
--
-asserts
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+ol
+>
+<
+li
+>
+foo
+[
+<
+li
+>
+\
+]
+bar
+<
+/
+ol
+>
+"
+compare
+innerHTML
+]
+expected
 :
-3
-min
--
-asserts
-:
-3
+FAIL
 [
 [
 [
@@ -9822,167 +9850,13 @@ forwarddelete
 ]
 "
 <
-ol
->
-<
-li
->
-foo
-[
-<
-li
->
-\
-]
-bar
-<
-/
-ol
->
-"
-compare
-innerHTML
-]
-expected
-:
-FAIL
-[
-[
-[
-"
-forwarddelete
-"
-"
-"
-\
-]
-\
-]
-"
-<
 div
 >
-abc
+ab
 [
 \
 ]
-<
-/
-div
->
-"
-compare
-innerHTML
-]
-expected
-:
-FAIL
-[
-[
-[
-"
-forwarddelete
-"
-"
-"
-\
-]
-\
-]
-"
-<
-div
->
-abc
-[
-\
-]
-<
-/
-div
->
-<
-div
->
-def
-<
-/
-div
->
-"
-compare
-innerHTML
-]
-expected
-:
-FAIL
-[
-[
-[
-"
-forwarddelete
-"
-"
-"
-\
-]
-\
-]
-"
-<
-div
->
-abc
-[
-\
-]
-<
-/
-div
->
-<
-div
->
-def
-<
-/
-div
->
-"
-compare
-innerHTML
-]
-expected
-:
-FAIL
-[
-[
-[
-"
-forwarddelete
-"
-"
-"
-\
-]
-\
-]
-"
-<
-div
->
-abc
-[
-\
-]
-<
-/
-div
->
-<
-div
->
-def
+c
 <
 /
 div
@@ -10050,14 +9924,6 @@ abc
 /
 div
 >
-<
-div
->
-def
-<
-/
-div
->
 "
 compare
 innerHTML
@@ -10081,11 +9947,10 @@ forwarddelete
 <
 div
 >
-ab
+abc
 [
 \
 ]
-c
 <
 /
 div
@@ -10195,6 +10060,131 @@ abc
 [
 \
 ]
+<
+/
+div
+>
+<
+div
+>
+def
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+>
+abc
+[
+\
+]
+<
+/
+div
+>
+<
+div
+>
+def
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+>
+abc
+[
+\
+]
+<
+/
+div
+>
+<
+div
+>
+def
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+>
+abc
+[
+\
+]
+<
+/
+div
+>
+<
+div
+>
+def
 <
 /
 div
@@ -10378,6 +10368,221 @@ false
 )
 return
 value
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+line
+>
+foo
+[
+\
+]
+\
+\
+n
+bar
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+line
+>
+foo
+[
+\
+]
+\
+\
+n
+\
+\
+nbar
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+pre
+-
+line
+>
+[
+\
+]
+f
+\
+\
+nbar
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+nowrap
+>
+foo
+[
+\
+]
+\
+\
+nbar
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+white
+-
+space
+:
+nowrap
+>
+[
+\
+]
+f
+\
+\
+nbar
+<
+/
+div
+>
+"
+compare
+innerHTML
 ]
 expected
 :
