--- a/testing/web-platform/meta/input-events/input-events-get-target-ranges-backspace.tentative.html.ini
+++ b/testing/web-platform/meta/input-events/input-events-get-target-ranges-backspace.tentative.html.ini
@@ -74,17 +74,14 @@ p
 expected
 :
 if
-(
 os
 =
 =
 "
 win
 "
-)
 :
 FAIL
-PASS
 [
 Meta
 +
@@ -505,6 +502,85 @@ ghi
 <
 /
 div
+>
+"
+-
+comparing
+innerHTML
+]
+expected
+:
+FAIL
+[
+Backspace
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+\
+\
+n
+\
+\
+n
+[
+\
+]
+def
+<
+/
+p
+>
+"
+]
+expected
+:
+FAIL
+[
+Backspace
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+\
+\
+n
+\
+\
+n
+[
+\
+]
+def
+<
+/
+p
 >
 "
 -
