--- a/testing/web-platform/meta/input-events/input-events-get-target-ranges-forwarddelete.tentative.html.ini
+++ b/testing/web-platform/meta/input-events/input-events-get-target-ranges-forwarddelete.tentative.html.ini
@@ -66,17 +66,14 @@ innerHTML
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
 :
 FAIL
-PASS
 [
 Meta
 +
@@ -674,10 +671,8 @@ p
 p
 contenteditable
 =
-\
 "
 false
-\
 "
 >
 abc
@@ -721,10 +716,8 @@ p
 p
 contenteditable
 =
-\
 "
 false
-\
 "
 >
 abc
@@ -1075,6 +1068,265 @@ ghi
 div
 >
 "
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+def
+<
+/
+p
+>
+"
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+ndef
+<
+/
+p
+>
+"
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+def
+<
+/
+p
+>
+"
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+\
+\
+n
+def
+<
+/
+p
+>
+"
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+def
+<
+/
+p
+>
+"
+-
+comparing
+innerHTML
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+def
+<
+/
+p
+>
+"
+-
+comparing
+innerHTML
+]
+expected
+:
+FAIL
+[
+Delete
+at
+"
+<
+p
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+line
+"
+>
+abc
+[
+\
+]
+\
+\
+n
+\
+\
+n
+def
+<
+/
+p
+>
+"
+-
+comparing
+innerHTML
 ]
 expected
 :
