--- a/browser/components/aboutlogins/tests/browser/browser.ini
+++ b/browser/components/aboutlogins/tests/browser/browser.ini
@@ -351,6 +351,25 @@ browser_openSite
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+bits
+=
+=
+64
+#
+Bug
+1581889
 [
 browser_osAuthDialog
 .
