Backed out changeset 86d5ab060da8 (bug 1727919) for causing youtube playback failures on macOS 10.15. CLOSED TREE
UltraBlame original commit: 844aeefe14096fbd4001a414cb1bcb63223ab2bd

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -549,6 +549,52 @@ youtube
 -
 playback
 -
+av1
+-
+sfr
+-
+firefox
+-
+raptor
+-
+youtube
+-
+playback
+-
+h264
+-
+sfr
+-
+firefox
+-
+raptor
+-
+youtube
+-
+playback
+-
+hfr
+-
+firefox
+-
+raptor
+-
+youtube
+-
+playback
+-
+vp9
+-
+sfr
+-
+firefox
+-
+raptor
+-
+youtube
+-
+playback
+-
 widevine
 -
 hfr
@@ -586,6 +632,52 @@ raptor
 -
 chrome
 :
+-
+raptor
+-
+youtube
+-
+playback
+-
+av1
+-
+sfr
+-
+chrome
+-
+raptor
+-
+youtube
+-
+playback
+-
+h264
+-
+sfr
+-
+chrome
+-
+raptor
+-
+youtube
+-
+playback
+-
+hfr
+-
+chrome
+-
+raptor
+-
+youtube
+-
+playback
+-
+vp9
+-
+sfr
+-
+chrome
 -
 raptor
 -
