--- a/testing/raptor/raptor/raptor.ini
+++ b/testing/raptor/raptor/raptor.ini
@@ -28,6 +28,114 @@ youtube
 -
 playback
 -
+v9
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
+h264
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
+av1
+-
+sfr
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
+h264
+-
+sfr
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
+hfr
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
+vp9
+-
+sfr
+.
+ini
+]
+[
+include
+:
+tests
+/
+benchmarks
+/
+raptor
+-
+youtube
+-
+playback
+-
 widevine
 -
 hfr
