Bug 1726118 - Prefix all webrender debug prefs with gfx.webrender.debug. r=gfx-reviewers,jrmuizel
Differential Revision: https://phabricator.services.mozilla.com/D123965

UltraBlame original commit: e32da12745e9185f0689927760454cc539989d71

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31284,6 +31284,8 @@ gfx
 .
 webrender
 .
+debug
+.
 blob
 .
 paint
@@ -31305,6 +31307,8 @@ gfx
 .
 webrender
 .
+debug
+.
 enable
 -
 capture
@@ -31323,6 +31327,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 dl
 .
@@ -31345,6 +31351,8 @@ gfx
 .
 webrender
 .
+debug
+.
 dl
 .
 dump
@@ -31365,6 +31373,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 dl
 .
@@ -31414,6 +31424,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 highlight
 -
