Bug 1728315 - Add missing data review links in metrics.yaml. r=janerik
Differential Revision: https://phabricator.services.mozilla.com/D124097

UltraBlame original commit: 1b7f294df44019399702e9921b03f90924154ce5

--- a/toolkit/components/telemetry/geckoview/streaming/metrics.yaml
+++ b/toolkit/components/telemetry/geckoview/streaming/metrics.yaml
@@ -6331,7 +6331,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6394,7 +6412,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6499,7 +6535,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6596,7 +6650,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6685,7 +6757,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6751,7 +6841,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
@@ -6818,7 +6926,25 @@ id
 data_reviews
 :
 -
-TODO
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1696045
+#
+c5
 notification_emails
 :
 -
