Bug 1726118 - Prefix all webrender debug prefs with gfx.webrender.debug. r=gfx-reviewers,jrmuizel
Differential Revision: https://phabricator.services.mozilla.com/D123965

UltraBlame original commit: a14528944cc8af7672ee12ea2820382b91e7fd2f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31241,6 +31241,8 @@ gfx
 .
 webrender
 .
+debug
+.
 blob
 .
 paint
@@ -31262,6 +31264,8 @@ gfx
 .
 webrender
 .
+debug
+.
 enable
 -
 capture
@@ -31280,6 +31284,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 dl
 .
@@ -31302,6 +31308,8 @@ gfx
 .
 webrender
 .
+debug
+.
 dl
 .
 dump
@@ -31322,6 +31330,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 dl
 .
@@ -31371,6 +31381,8 @@ name
 gfx
 .
 webrender
+.
+debug
 .
 highlight
 -
