--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -55827,6 +55827,78 @@ mirror
 always
 #
 Set
+to
+ignore
+referrer
+policies
+which
+is
+less
+restricted
+than
+the
+default
+for
+#
+cross
+-
+site
+requests
+in
+the
+private
+browsing
+mode
+including
+'
+unsafe
+-
+url
+'
+#
+'
+no
+-
+referrer
+-
+when
+-
+downgrade
+'
+and
+'
+origin
+-
+when
+-
+cross
+-
+origin
+'
+.
+-
+name
+:
+network
+.
+http
+.
+referer
+.
+disallowCrossSiteRelaxingDefault
+.
+pbmode
+type
+:
+bool
+value
+:
+IS_EARLY_BETA_OR_EARLIER
+mirror
+:
+always
+#
+Set
 the
 Private
 Browsing
