Bug 1726628 - Switch cargo resolver to 2 r=glandium
Differential Revision: https://phabricator.services.mozilla.com/D123157

UltraBlame original commit: 86d44d84b2cae5abd0df5af629e7c2827c592aa4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -329,6 +329,27 @@ rust
 "
 ]
 #
+Use
+the
+new
+dependency
+resolver
+to
+reduce
+some
+of
+the
+platform
+-
+specific
+dependencies
+.
+resolver
+=
+"
+2
+"
+#
 Explicitly
 specify
 what
