Bug 1728666 - Allow building artifact builds without the NDK. r=nalexander
Looks like the new gradle version throws an exception now.

Differential Revision: https://phabricator.services.mozilla.com/D124258

UltraBlame original commit: 8b72575a48e67c668751bb1d59a966860170dd1c

--- a/mobile/android/gradle/with_gecko_binaries.gradle
+++ b/mobile/android/gradle/with_gecko_binaries.gradle
@@ -254,6 +254,8 @@ substs
 .
 ANDROID_NDK
 }
+try
+{
 if
 (
 project
@@ -269,6 +271,26 @@ project
 android
 .
 ndkDirectory
+}
+}
+catch
+(
+InvalidUserDataException
+ex
+)
+{
+/
+/
+The
+NDK
+is
+not
+installed
+that
+'
+s
+ok
+.
 }
 def
 mozbuild
