Backed out changeset 16c71fac6426 (bug 1401466) for causing SocketControl related fuzzing build bustages. CLOSED TREE
UltraBlame original commit: 3ca228ef6edf9142f1d1ea66a043ddbd927ce9fc

--- a/security/manager/pki/components.conf
+++ b/security/manager/pki/components.conf
@@ -125,6 +125,33 @@ mozilla
 .
 org
 /
+nsClientAuthDialogs
+;
+1
+'
+'
+mozilla
+.
+org
+/
+nsGeneratingKeypairInfoDialogs
+;
+1
+'
+'
+mozilla
+.
+org
+/
+nsTokenDialogs
+;
+1
+'
+'
+mozilla
+.
+org
+/
 nsTokenPasswordDialogs
 ;
 1
