Bug 1853140 - Mark some CI intermittent passes and failures. r=webgpu-reviewers,jimb
Differential Revision: https://phabricator.services.mozilla.com/D188245

UltraBlame original commit: be9c3b4f831980f987ded4cb634f167498f5bfaf

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/13/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/13/cts.https.html.ini
@@ -47504,8 +47504,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47569,8 +47569,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47634,8 +47634,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47699,8 +47699,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47764,8 +47764,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47894,8 +47894,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -47959,8 +47959,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48024,8 +48024,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48089,8 +48089,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48154,8 +48154,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48219,8 +48219,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48284,8 +48284,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48349,8 +48349,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48416,8 +48416,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48483,8 +48483,8 @@ debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48549,9 +48549,9 @@ not
 debug
 :
 [
-NOTRUN
-TIMEOUT
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48616,8 +48616,8 @@ not
 debug
 :
 [
-TIMEOUT
 PASS
+TIMEOUT
 NOTRUN
 ]
 [
@@ -48683,9 +48683,9 @@ not
 debug
 :
 [
-NOTRUN
-TIMEOUT
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48750,8 +48750,9 @@ not
 debug
 :
 [
-NOTRUN
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48816,8 +48817,9 @@ not
 debug
 :
 [
-NOTRUN
+PASS
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -48881,7 +48883,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -48944,7 +48950,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49005,7 +49015,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49066,7 +49080,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49127,7 +49145,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49188,7 +49210,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49249,7 +49275,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49310,7 +49340,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49371,7 +49405,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49432,7 +49470,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49493,7 +49535,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49554,7 +49600,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49615,7 +49665,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49676,7 +49730,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49737,7 +49795,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49798,7 +49860,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49859,7 +49925,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49920,7 +49990,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -49981,7 +50055,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50042,7 +50120,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50103,7 +50185,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50164,7 +50250,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50225,7 +50315,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50286,7 +50380,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50347,7 +50445,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50408,7 +50510,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50469,7 +50575,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50530,7 +50640,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50591,7 +50705,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50652,7 +50770,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50713,7 +50835,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50774,7 +50900,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50835,7 +50965,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50896,7 +51030,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -50957,7 +51095,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51018,7 +51160,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51079,7 +51225,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51140,7 +51290,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51201,7 +51355,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51262,7 +51420,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51323,7 +51485,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51384,7 +51550,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51445,7 +51615,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51506,7 +51680,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51567,7 +51745,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51628,7 +51810,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51689,7 +51875,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51750,7 +51940,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51811,7 +52005,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51872,7 +52070,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51933,7 +52135,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -51994,7 +52200,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -52055,7 +52265,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -52116,7 +52330,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -52177,7 +52395,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -52238,7 +52460,11 @@ and
 not
 debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -160679,17 +160905,12 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
 PASS
@@ -160748,17 +160969,12 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
 PASS
@@ -160817,22 +161033,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -160886,17 +161097,12 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
 PASS
@@ -160955,22 +161161,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161024,22 +161225,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161093,22 +161289,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
-TIMEOUT
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161162,21 +161353,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161230,21 +161417,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
 PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161298,21 +161481,17 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
-NOTRUN
+PASS
 TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -161366,19 +161545,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161431,19 +161609,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161496,19 +161673,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161561,19 +161737,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161626,19 +161801,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161691,19 +161865,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161756,19 +161929,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161821,19 +161993,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161886,19 +162057,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -161951,19 +162121,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162016,19 +162185,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162081,19 +162249,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162146,19 +162313,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162211,19 +162377,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162276,19 +162441,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
@@ -162341,19 +162505,18 @@ mac
 :
 FAIL
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
+[
+PASS
+TIMEOUT
 NOTRUN
+]
 [
 :
 dimension
