--- a/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
@@ -5754,6 +5754,18 @@ linux
 FAIL
 PASS
 ]
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -6566,6 +6578,18 @@ os
 =
 "
 linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
+win
 "
 :
 [
