--- a/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
@@ -6702,7 +6702,10 @@ vectorize
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -6792,7 +6795,10 @@ vectorize
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
