--- a/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
@@ -2836,6 +2836,18 @@ linux
 FAIL
 PASS
 ]
+if
+os
+=
+=
+"
+win
+"
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -2894,17 +2906,12 @@ FAIL
 PASS
 ]
 if
-(
 os
 =
 =
 "
 win
 "
-)
-and
-not
-debug
 :
 [
 FAIL
@@ -2961,6 +2968,18 @@ os
 =
 "
 linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
+win
 "
 :
 [
@@ -4567,6 +4586,18 @@ os
 =
 "
 linux
+"
+:
+[
+FAIL
+PASS
+]
+if
+os
+=
+=
+"
+win
 "
 :
 [
