Bug 1851097 - Remove layout.css.moz-document.content.enabled pref r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D187349

UltraBlame original commit: 3d17db9fd49f37e00735456090b476fa22c5801c

--- a/layout/style/test/chrome/chrome.toml
+++ b/layout/style/test/chrome/chrome.toml
@@ -73,6 +73,13 @@ html
 ]
 [
 "
+test_bug511909
+.
+html
+"
+]
+[
+"
 test_bug1346623
 .
 html
@@ -200,6 +207,13 @@ bug
 [
 "
 test_moz_document_rules
+.
+html
+"
+]
+[
+"
+test_moz_document_serialization
 .
 html
 "
