Bug 1837079 - [8/10] Implement file-dialog utility-process-crash tests  r=handyman,ipc-reviewers,mstange,gerard-majax,nika,profiler-reviewers
Implement a mochitest confirming the stability of Firefox when the
file-picker crashes (patterned loosely off the existing geolocation
crash tests).

Differential Revision: https://phabricator.services.mozilla.com/D184723

UltraBlame original commit: 799ea189e7480bd845ed9ab6bf81e456976a8a3f

--- a/ipc/glue/test/browser/browser.ini
+++ b/ipc/glue/test/browser/browser.ini
@@ -570,6 +570,24 @@ if
 crashreporter
 ccov
 [
+browser_utility_filepicker_crashed
+.
+js
+]
+skip
+-
+if
+=
+os
+!
+=
+'
+win
+'
+!
+crashreporter
+ccov
+[
 browser_utility_geolocation_crashed
 .
 js
