Bug 1792650 - Enable Object.groupBy and Map.groupBy by default. r=spidermonkey-reviewers,mgaudet
Differential Revision: https://phabricator.services.mozilla.com/D188229

UltraBlame original commit: 5a72901f9845aabb77a174237b9998d2ba55dcac

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -46372,6 +46372,36 @@ mirror
 :
 always
 #
+Support
+for
+Object
+.
+groupBy
+/
+Map
+.
+groupBy
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+array_grouping
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 ifdef
 NIGHTLY_BUILD
 #
@@ -46393,34 +46423,6 @@ options
 experimental
 .
 iterator_helpers
-type
-:
-bool
-value
-:
-false
-mirror
-:
-always
-#
-Experimental
-support
-for
-Array
-Grouping
-in
-JavaScript
-.
--
-name
-:
-javascript
-.
-options
-.
-experimental
-.
-array_grouping
 type
 :
 bool
