--- a/browser/components/shopping/tests/browser/browser.ini
+++ b/browser/components/shopping/tests/browser/browser.ini
@@ -107,6 +107,47 @@ com
 ohttp
 -
 config
+#
+Disable
+the
+fakespot
+feature
+callouts
+to
+avoid
+interference
+.
+Individual
+tests
+#
+that
+need
+them
+can
+re
+-
+enable
+them
+as
+needed
+.
+browser
+.
+newtabpage
+.
+activity
+-
+stream
+.
+asrouter
+.
+userprefs
+.
+cfr
+.
+features
+=
+false
 [
 browser_adjusted_rating
 .
@@ -149,6 +190,11 @@ js
 ]
 [
 browser_shopping_container
+.
+js
+]
+[
+browser_shopping_message_triggers
 .
 js
 ]
