--- a/toolkit/components/shopping/test/browser/browser.ini
+++ b/toolkit/components/shopping/test/browser/browser.ini
@@ -21,6 +21,47 @@ experience2023
 optedIn
 =
 1
+#
+Disable
+the
+fakespot
+feature
+callouts
+to
+avoid
+interference
+.
+Individual
+tests
+#
+that
+need
+them
+can
+re
+-
+enable
+them
+as
+needed
+.
+browser
+.
+newtabpage
+.
+activity
+-
+stream
+.
+asrouter
+.
+userprefs
+.
+cfr
+.
+features
+=
+false
 support
 -
 files
