Bug 1852774 - [ci] Fix Wayland debug test misconfiguration, r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D188035

UltraBlame original commit: 7fcd45f7f407a0c756c8b8292b1df8d8162cdce6

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -1476,6 +1476,25 @@ default
 ]
 1proc
 :
+by
+-
+test
+-
+platform
+:
+.
+*
+-
+wayland
+/
+debug
+.
+*
+:
+[
+]
+default
+:
 built
 -
 projects
@@ -2482,6 +2501,15 @@ platform
 android
 .
 *
+:
+[
+]
+.
+*
+-
+wayland
+/
+debug
 :
 [
 ]
@@ -3874,6 +3902,15 @@ process
 :
 [
 ]
+.
+*
+-
+wayland
+/
+debug
+:
+[
+]
 default
 :
 built
@@ -4145,6 +4182,17 @@ android
 .
 *
 /
+.
+*
+:
+[
+]
+.
+*
+-
+wayland
+/
+debug
 .
 *
 :
@@ -5922,6 +5970,17 @@ tsan
 :
 [
 ]
+.
+*
+-
+wayland
+/
+debug
+.
+*
+:
+[
+]
 default
 :
 built
@@ -6370,6 +6429,17 @@ android
 *
 -
 tsan
+.
+*
+:
+[
+]
+.
+*
+-
+wayland
+/
+debug
 .
 *
 :
@@ -7142,6 +7212,17 @@ android
 *
 -
 tsan
+.
+*
+:
+[
+]
+.
+*
+-
+wayland
+/
+debug
 .
 *
 :
