Bug 1853105 - Adjust reftest expectations. r=webgpu-reviewers,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D188572

UltraBlame original commit: 4210301c4bb27664672983255caf26054c6f5b27

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -5640,23 +5640,6 @@ uniform
 overload
 =
 "
-scalar
-"
-]
-expected
-:
-FAIL
-[
-:
-inputSource
-=
-"
-uniform
-"
-;
-overload
-=
-"
 vec3
 "
 ]
@@ -5810,14 +5793,6 @@ vec2
 ]
 expected
 :
-if
-os
-=
-=
-"
-mac
-"
-:
 FAIL
 [
 :
@@ -5835,14 +5810,6 @@ vec2
 ]
 expected
 :
-if
-os
-=
-=
-"
-mac
-"
-:
 FAIL
 [
 :
@@ -5859,14 +5826,6 @@ vec2
 "
 ]
 expected
-:
-if
-os
-=
-=
-"
-mac
-"
 :
 FAIL
 [
@@ -7096,6 +7055,14 @@ scalar
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -7150,7 +7117,10 @@ scalar
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -7229,7 +7199,10 @@ scalar
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -7292,15 +7265,10 @@ vec2
 ]
 expected
 :
-if
-os
-=
-=
-"
-mac
-"
-:
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -7317,15 +7285,10 @@ vec2
 ]
 expected
 :
-if
-os
-=
-=
-"
-mac
-"
-:
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -7342,15 +7305,10 @@ vec2
 ]
 expected
 :
-if
-os
-=
-=
-"
-mac
-"
-:
+[
+PASS
 FAIL
+]
 [
 cts
 .
