--- a/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
@@ -1043,6 +1043,14 @@ uniform
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -1054,6 +1062,14 @@ storage_r
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -1064,6 +1080,14 @@ storage_rw
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -1805,6 +1829,14 @@ uniform
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -1816,6 +1848,14 @@ storage_r
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -1826,6 +1866,14 @@ storage_rw
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -2489,6 +2537,14 @@ uniform
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -2500,6 +2556,14 @@ storage_r
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -2510,6 +2574,14 @@ storage_rw
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -5169,6 +5241,14 @@ uniform
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -5180,6 +5260,14 @@ storage_r
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -5190,6 +5278,14 @@ storage_rw
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
