--- a/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
@@ -3204,7 +3204,10 @@ vectorize
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
@@ -6542,7 +6545,10 @@ vectorize
 ]
 expected
 :
+[
+PASS
 FAIL
+]
 [
 :
 inputSource
