Bug 1854781 - Convert AboutNewTabService to an ES module. r=amy
Differential Revision: https://phabricator.services.mozilla.com/D189045

UltraBlame original commit: 10207329eca6d6461c0a998b8f374b06ebf42936

--- a/browser/components/newtab/components.conf
+++ b/browser/components/newtab/components.conf
@@ -126,7 +126,7 @@ service
 '
 ]
 '
-jsm
+esModule
 '
 :
 '
@@ -139,7 +139,9 @@ modules
 /
 AboutNewTabService
 .
-jsm
+sys
+.
+mjs
 '
 '
 constructor
