--- a/toolkit/components/resistfingerprinting/components.conf
+++ b/toolkit/components/resistfingerprinting/components.conf
@@ -193,6 +193,161 @@ js_name
 rfp
 '
 '
+categories
+'
+:
+{
+'
+profile
+-
+after
+-
+change
+'
+:
+'
+nsRFPService
+'
+}
+'
+processes
+'
+:
+ProcessSelector
+.
+MAIN_PROCESS_ONLY
+}
+{
+'
+cid
+'
+:
+'
+{
+07f45442
+-
+1806
+-
+44be
+-
+9230
+-
+12eb79de9bac
+}
+'
+'
+contract_ids
+'
+:
+[
+'
+mozilla
+.
+org
+/
+fingerprinting
+-
+override
+;
+1
+'
+]
+'
+esModule
+'
+:
+'
+resource
+:
+/
+/
+gre
+/
+modules
+/
+FingerprintingWebCompatService
+.
+sys
+.
+mjs
+'
+'
+constructor
+'
+:
+'
+FingerprintingOverride
+'
+}
+{
+'
+cid
+'
+:
+'
+{
+e7b1da06
+-
+2594
+-
+4670
+-
+aea4
+-
+131070baca4c
+}
+'
+'
+contract_ids
+'
+:
+[
+'
+mozilla
+.
+org
+/
+fingerprinting
+-
+webcompat
+-
+service
+;
+1
+'
+]
+'
+singleton
+'
+:
+True
+'
+esModule
+'
+:
+'
+resource
+:
+/
+/
+gre
+/
+modules
+/
+FingerprintingWebCompatService
+.
+sys
+.
+mjs
+'
+'
+constructor
+'
+:
+'
+FingerprintingWebCompatService
+'
+'
 processes
 '
 :
