Bug 1801501 - Check if rootDoc is secure context for web compat; r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D175134

UltraBlame original commit: b8981c31d4b9f3b2ae88588f41997f07c521e3f1

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -4019,6 +4019,12 @@ test_navigator_cookieEnabled
 .
 html
 ]
+skip
+-
+if
+=
+http3
+http2
 [
 test_navigator_hardwareConcurrency
 .
@@ -4329,6 +4335,25 @@ test_script_loader_js_cache
 .
 html
 ]
+disabled
+=
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1853173
 skip
 -
 if
@@ -4379,6 +4404,25 @@ test_script_loader_js_cache_module
 .
 html
 ]
+disabled
+=
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1853173
 skip
 -
 if
@@ -4540,6 +4584,25 @@ test_script_loader_js_cache_module_sri
 .
 html
 ]
+disabled
+=
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1853173
 skip
 -
 if
