Backed out changeset 8265e6272d20 (bug 1853245) for breaking the Decision Task. CLOSED TREE
UltraBlame original commit: 1019d4f9631452f203a8adfa3c8ccb784d81b6c4

--- a/toolkit/components/telemetry/tests/browser/browser.ini
+++ b/toolkit/components/telemetry/tests/browser/browser.ini
@@ -1,36 +1,4 @@
 #
--
-*
--
-Mode
-:
-python
-;
-indent
--
-tabs
--
-mode
-:
-nil
-;
-tab
--
-width
-:
-40
--
-*
--
-#
-vim
-:
-set
-filetype
-=
-python
-:
-#
 This
 Source
 Code
@@ -85,27 +53,39 @@ MPL
 0
 /
 .
-XPCSHELL_TESTS_MANIFESTS
-+
-=
 [
-"
-unit
-/
-xpcshell
-.
-ini
-"
+DEFAULT
 ]
-BROWSER_CHROME_MANIFESTS
-+
+support
+-
+files
 =
-[
-"
-browser
-/
-browser
+file_iframe
 .
-ini
-"
+html
+file_media
+.
+html
+gizmo
+.
+mp4
+[
+browser_UpdatePingSuccess
+.
+js
+]
+[
+browser_DynamicScalars
+.
+js
+]
+skip
+-
+if
+=
+verify
+[
+browser_media_element_in_page_scalar
+.
+js
 ]
