--- a/toolkit/components/places/tests/browser/previews/browser.ini
+++ b/toolkit/components/places/tests/browser/previews/browser.ini
@@ -1,36 +1,4 @@
 #
--
-*
--
-Mode
-:
-python
-;
-indent
--
-tabs
--
-mode
-:
-nil
-;
-tab
--
-width
-:
-40
--
-*
--
-#
-vim
-:
-set
-filetype
-=
-python
-:
-#
 This
 Source
 Code
@@ -85,27 +53,34 @@ MPL
 0
 /
 .
-XPCSHELL_TESTS_MANIFESTS
-+
-=
 [
-"
-unit
-/
-xpcshell
-.
-ini
-"
+DEFAULT
 ]
-BROWSER_CHROME_MANIFESTS
-+
+prefs
 =
-[
-"
-browser
-/
 browser
 .
-ini
-"
+pagethumbnails
+.
+capturing_disabled
+=
+false
+places
+.
+previews
+.
+enabled
+=
+true
+places
+.
+previews
+.
+log
+=
+true
+[
+browser_thumbnails
+.
+js
 ]
