Bug 1855834: build(webgpu): bump `wgpu` to 9a76c483da4891fb7046c579e36d7c54bdb0b251 r=webgpu-reviewers,supply-chain-reviewers,nical
Differential Revision: https://phabricator.services.mozilla.com/D189583

UltraBlame original commit: 4bbd328972e0dfa7235396017583593a34cfcec9

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
@@ -1052,6 +1052,22 @@ linux
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -3329,6 +3345,23 @@ linux
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -5011,6 +5044,23 @@ linux
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -5067,6 +5117,22 @@ linux
 [
 PASS
 FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+FAIL
+PASS
 ]
 FAIL
 [
