--- a/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
@@ -687,6 +687,22 @@ FAIL
 TIMEOUT
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -3653,6 +3669,31 @@ FAIL
 NOTRUN
 TIMEOUT
 ]
+if
+os
+=
+=
+"
+mac
+"
+:
+FAIL
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 :
@@ -4436,59 +4477,6 @@ step_mode
 vertex
 "
 ]
-#
-TODO
-:
-Currently
-has
-issues
-being
-followed
-up
-with
-;
-see
-<
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1836479
->
-.
-#
-Passed
-in
-opt
-on
-Windows
-but
-failed
-in
-debug
-in
-CI
-.
-Local
-opt
-tests
-still
-fail
-for
-erichdongubler
-.
 expected
 :
 [
@@ -7528,28 +7516,6 @@ large_draw
 :
 *
 ]
-#
-TODO
-:
-<
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1848993
->
 expected
 :
 [
