Revert "Bug 1968146 - Remove Pocket globals r=kpatenio,rking" for causing bc failures.
This reverts commit cd77c51e5c0972ff73a0775c95790317e393638b.

Revert "Bug 1967559 - clean up pocket in context menu r=fchasen,rking"

This reverts commit 423574737db4eb9d3ba251188d229a7ae83a467b.

Revert "Bug 1967558 - Remove Pocket icon button in Reader Mode r=kpatenio,rking"

This reverts commit 60fba1fa40f5a8f4094d0e5273ec6087d628b4dd.

Revert "Bug 1968123 - Remove Pocket actors r=frontend-codestyle-reviewers,kpatenio,rking"

This reverts commit b84d3ac2f956e278ca31efaec7c892edddcba33f.

Revert "Bug 1967557 - Remove Pocket icon button in the toolbar - r=fchasen,fluent-reviewers,desktop-theme-reviewers,omc-reviewers,emilio,flod,mimi"

This reverts commit 58ecec91bae638d3ccb47efcd4aa9a78f54aad1a.

Revert "Bug 1967788 - Remove Pocket component tests - r=fchasen"

This reverts commit d9b111ac1be585601e41a61b89651a3d90aaf4ab.

UltraBlame original commit: 7fe1717570a0d25274586436d8bc62acd6ab375f

--- a/browser/components/about/components.conf
+++ b/browser/components/about/components.conf
@@ -116,6 +116,28 @@ firefoxview
 messagepreview
 '
 '
+pocket
+-
+home
+'
+'
+pocket
+-
+saved
+'
+'
+pocket
+-
+signup
+'
+'
+pocket
+-
+style
+-
+guide
+'
+'
 policies
 '
 '
